# predibloom

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.json
docs/: OPEN_METEO_APIS.md  kalshi-api.md  market-forecast-analysis.md  trading_notebook.md
mcp-server/: README.md  predibloom_mcp.py  pyproject.toml
scripts/: nbm_fetch.py  pyproject.toml
src/: app.cpp  main.cpp
src/api/: forecast_db.cpp  forecast_db.hpp  gribstream_client.cpp  gribstream_client.hpp  gribstream_types.hpp  http_cache.cpp  http_cache.hpp  kalshi_auth.hpp  kalshi_client.cpp  kalshi_client.hpp  kalshi_db.cpp  kalshi_db.hpp  local_kalshi_client.cpp  local_kalshi_client.hpp  local_nbm_client.cpp  local_nbm_client.hpp  nbm_downloader.cpp  nbm_downloader.hpp  nbm_grib_parser.cpp  nbm_grib_parser.hpp  nbm_grid_reader.cpp  nbm_grid_reader.hpp  nbm_service.cpp  nbm_service.hpp  nws_client.cpp  nws_client.hpp  openmeteo_client.cpp  openmeteo_client.hpp  openmeteo_types.hpp  rate_limiter.hpp  result.hpp  test_client.cpp  types.hpp  weather_client.hpp
src/cli/: bracket.hpp  formatters.hpp  main.cpp
src/cli/commands/: backtest.cpp  backtest.hpp  calibrate.cpp  calibrate.hpp  history.cpp  history.hpp  kalshi_sync.cpp  kalshi_sync.hpp  misc.cpp  misc.hpp  nbm.cpp  nbm.hpp  portfolio.cpp  portfolio.hpp  predict.cpp  predict.hpp
src/core/: backtest_algo.cpp  backtest_algo.hpp  config.cpp  config.hpp  datetime.cpp  datetime.hpp  latency_algo.cpp  latency_algo.hpp  service.cpp  service.hpp  simple_algo.cpp  simple_algo.hpp  time_utils.hpp  weather_comparison.cpp  weather_comparison.hpp
src/gui/: app.cpp  app.hpp  control_socket.cpp  control_socket.hpp  main.cpp
src/ui/: chart.hpp  theme.hpp  widgets.hpp
tests/: test_config.cpp  test_formatters.cpp  test_gribstream_integration.cpp  test_gribstream_types.cpp  test_local_nbm_client.cpp  test_openmeteo_types.cpp  test_rate_limiter.cpp  test_result.cpp  test_time_utils.cpp  test_types.cpp  test_weather_comparison.cpp
tests/test_data/: valid_auth.json  valid_config.json
