[project]
name = "predibloom-scripts"
version = "0.1.0"
description = "Scripts for predibloom (NBM data fetching)"
requires-python = ">=3.10"
dependencies = [
    "s3fs",
    "xarray",
    "cfgrib",
    "ecmwflibs",
    "pygrib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]
